--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <img src="/shafiq.jpg" alt="avatar">
                     </div>
                     <div class="scroll-icon-box">
-                        <a href="/Shafiq Ssentongo.docx" class="download-btn" download>
+                        <a href="/Shafiq Ssentongo.docx.pdf" class="download-btn" download>
                             <i class="uil uil-down-arrow"></i>
                             <p>Download CV</p>
                         </a>
