--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                             </div>
                         </div>
                         <div class="col">
-                            <form class="form-control" action="https://api.web3forms.com/submit" method="post">
+                            <form class="form-control" method="post" name="contact" netlify>
+                                <input type="hidden" name="form-name" value="contact">
                                 <div class="form-inputs">
-                                    <input type="hidden" name="access_key" value="08fbdc0f-80f5-4959-a48f-d291bb192002">
                                     <input type="text" class="input-field" placeholder="Name:" name="name">
                                     <input type="text" class="input-field" placeholder="Email:" name="email">
                                 </div>
