--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="featured-text-btn">
                         <a href="https://api.whatsapp.com/send/?phone=%2B256701909645&text&type=phone_number&app_absent=0" target="_blank">
-                            <button class="btn blue-btn">Hire Me</button>
+                            <button class="btn blue-btn">Get In touch</button>
                         </a>
                     </div>
                     <div class="social_icons">
@@ -73,7 +73,7 @@
                         <img src="/shafiq.jpg" alt="avatar">
                     </div>
                     <div class="scroll-icon-box">
-                        <a href="/Shafiq Ssentongo.docx.pdf" class="download-btn" download>
+                        <a href="/Shafiq Ssentongo.pdf" class="download-btn" download>
                             <i class="uil uil-down-arrow"></i>
                             <p>Download CV</p>
                         </a>
@@ -195,3 +195,4 @@
     <script src="/index.js"></script>
 </body>
 </html>
+
