--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <h3>Backend</h3>
                             </div>
                             <div class="skills-list">
-                                <span>PYTHON</span>
+                                <span>PHP</span>
                                 <span>C#</span>
                                 <span>JAVA</span>
                             </div>
@@ -121,7 +121,7 @@
                                 <h3>Database</h3>
                             </div>
                             <div class="skills-list">
-                                <span>SQL</span>
+                                <span>MS SQL Server</span>
                                 <span>MySQL</span>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="project-box">
                         <i class="uil uil-briefcase-alt"></i>
-                        <h3>In Progress.....</h3>
+                        <h3>PEE POINTER</h3>
                         <label><a href="#projects" style="text-decoration: none;" target="_self">OVERVIEW</a></label>
                     </div>
                 </div>
@@ -195,4 +195,5 @@
     <script src="/index.js"></script>
 </body>
 </html>
+
 
