--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="project-box">
                         <i class="uil uil-briefcase-alt"></i>
                         <h3>PEE POINTER</h3>
-                        <label><a href="#projects" style="text-decoration: none;" target="_self">OVERVIEW</a></label>
+                        <label><a href="https://github.com/Shafiq-Memphi5/peepointer" style="text-decoration: none;" target="_self">OVERVIEW</a></label>
                     </div>
                 </div>
             </section>
@@ -195,5 +195,6 @@
     <script src="/index.js"></script>
 </body>
 </html>
+
 
 
