--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <span>Shafiq Ssentongo</span>
                     </div>
                     <div class="featured-name">
-                        <p>I'm a <span class="typedText">Student</span></p>
+                        <p>I'm a <span class="typedText">Freelancer</span></p>
                     </div>
                     <div class="featured-text-info">
                         <p>Experienced with a lot of stuff</p>
@@ -195,6 +195,7 @@
     <script src="/index.js"></script>
 </body>
 </html>
+
 
 
 
